apport (0.67) UNRELEASED; urgency=low

  * debian/local/setup-apport-retracer: Add apt sources for restricted,
    universe, and multiverse, too.
  * po/de.po: Update from Rosetta.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 13 Mar 2007 12:57:31 +0100

apport (0.66) feisty; urgency=low

  * Remove apport/MultipartPostHandler.py, this functionality moved to
    python-launchpad-bugs now. Add a dependency to that package.
  * apport/ui.py, upload_launchpad_blob(): Use the shiny new
    launchpadBugs.storeblob.upload().
  * bin/apport-retrace: Attach retraced stack traces back to the Launchpad bug
    report if no other output option is given (This corresponds to the
    in-place editing when a report file is specified). Add option --cookie to
    specify a Mozilla-style cookie file for the necessary Launchpad
    authentication.
  * man/apport-retrace.1: Document above apport-retrace changes.
  * bin/apport-chroot: Add --cookie option: temporarily symlink cookie into
    the chroot and pass it to apport-retrace in retrace mode.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 10 Mar 2007 15:01:57 +0100

apport (0.65) feisty; urgency=low

  * debian/local/setup-apport-retracer:
    - Replace grep-dctrl with grep call, since grep-dctrl is not installed in
      all the DC chroots.
    - Do not download apport source from archive.u.c., instead require that
      this script lives in the unpacked apport source tree.
  * bin/apport-chroot: Use apt-get options -y and --allow-unauthenticated when
    installing additional packages.
  * bin/apport-chroot: Handle --extra-package for 'upgrade', too, to provide a
    simple way of adding a package to an existing chroot tarball.
  * debian/local/setup-apport-retracer: Create tarball chroots by default.
    It only imposes a negligible overhead, and sharing unpacked directories
    with multiple people is just too brittle.
  * bin/apport-retrace: Add option --no-purge to not purge unpacked packages